[package]
name = "acornledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "acornledger-server"
path = "src/server.rs"

[[bin]]
name = "acornledger-client"
path = "src/client.rs"

[dependencies]
chrono = { version = "0.4", features=["serde"] }
derive_builder = "0.12"
itertools = "0.10.5"
prost = "0.11"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
