[package]
name = "acornledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "acornledger-server"
path = "src/server.rs"

[[bin]]
name = "acornledger-client"
path = "src/client.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14"
prost = "0.14"
rust_decimal = "1.38"
rust_decimal_macros = "1.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
